<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/menu_button">

        <Button
            android:id="@+id/btnDisplayMenu"
            style="@style/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button"
            android:onClick="someButtonClicked"
            android:text="| | |" />
     <!--   <Button
            android:background="@drawable/red_button"
            android:id="@+id/button1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="test"
            style="@style/button_text" />
-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#3470f1"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LayoutMenu1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/titleMenu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu1"
                style="@style/menu_title_text"/>
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workarea1_item1_name"
                        style="@style/workarea_item_name"/>
                    <EditText
                        android:id="@+id/workarea1Item1Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        style="@style/workarea_item_value"
                        android:inputType="none"
                        android:editable="false"/>

                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workarea1_item2_name"
                        style="@style/workarea_item_name"/>
                    <EditText
                        android:id="@+id/workarea1Item2Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22.0"
                        style="@style/workarea_item_value"
                        android:inputType="numberDecimal"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workarea1_item3_name"
                        style="@style/workarea_item_name"/>
                    <EditText
                        android:id="@+id/workarea1Item3Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        style="@style/workarea_item_value"
                        android:inputType="none"
                        android:editable="false"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workarea1_item4_name"
                        style="@style/workarea_item_name"/>
                    <EditText
                        android:id="@+id/workarea1Item4Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        style="@style/workarea_item_value"
                        android:inputType="none"
                        android:editable="false"/>
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/workarea1Item4Image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/plomien_off"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMenu2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleMenu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu2"
                style="@style/menu_title_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMenu3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleMenu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu3"
                style="@style/menu_title_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMenu4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleMenu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu4"
                style="@style/menu_title_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMenu5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleMenu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu5"
                style="@style/menu_title_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMenu6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleMenu6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu6"
                style="@style/menu_title_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMenu7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleMenu7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleMenu7"
                style="@style/menu_title_text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workarea7_item1_name"
                        style="@style/workarea_item_name"/>
                    <TextView
                        android:id="@+id/workarea7Item1Value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0.0.0"
                        style="@style/workarea_item_value"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LayoutMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            android:background="@drawable/menu_left_button">


            <Button
                android:id="@+id/leftButton1"
                android:text="@string/LeftMenuBtn1"
                style="@style/left_menu_button"/>

            <Button
                android:id="@+id/leftButton2"
                android:text="@string/LeftMenuBtn2"
                style="@style/left_menu_button"/>

            <Button
                android:id="@+id/leftButton3"
                android:text="@string/LeftMenuBtn3"
                style="@style/left_menu_button" />

            <Button
                android:id="@+id/leftButton4"
                android:text="@string/LeftMenuBtn4"
                style="@style/left_menu_button" />

            <Button
                android:id="@+id/leftButton5"
                android:text="@string/LeftMenuBtn5"
                style="@style/left_menu_button" />

            <Button
                android:id="@+id/leftButton6"
                android:text="@string/LeftMenuBtn6"
                style="@style/left_menu_button" />

            <Button
                android:id="@+id/leftButton7"
                android:text="@string/LeftMenuBtn7"
                style="@style/left_menu_button" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>